<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="Modes">
            <menu>
        <item
            android:id="@+id/duelFragment"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/action_duelmenu" />
        <item
            android:id="@+id/playersFragment"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/action_players_menu" />
            </menu>
    </item>

        <item android:title="Options">
            <menu>
                <item
                    android:id="@+id/nav_sign_out"
                    android:icon="@android:drawable/ic_menu_revert"
                    android:onClick="signOut"
                    android:title="@string/sign_out" />
            </menu>
        </item>
    </group>
</menu>