<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="55dp"
    android:background="@drawable/yugioh_counter"
    android:theme="@style/Theme.YugiohDuelTheme"
    tools:context=".ui.dueloneplayer.DuelOnePlayerFragment">

    <TextView
        android:id="@+id/editTextNumber1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="4dp"
        android:layout_marginTop="108dp"
        android:ems="10"
        android:fontFamily="@font/msmincho"
        android:text="@string/life_point_value"
        android:textAlignment="center"
        android:textColor="@color/yugioh_yellow"
        android:textSize="70sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonreset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        android:fontFamily="@font/msmincho"

        android:text="@string/reset"
        android:textColor="@color/yugioh_yellow"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="147dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonreset">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/msmincho"
            android:maxLength="4"
            android:textAlignment="center"
            android:textColor="@color/yugioh_yellow"
            android:textSize="30sp"
            android:textStyle="bold|italic" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:fontFamily="@font/msmincho"
            android:text="@string/one"
            android:textColor="@color/yugioh_yellow"
            android:textSize="20sp"
            android:textStyle="bold|italic" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/cardView3"
        app:layout_constraintStart_toEndOf="@+id/cardView1"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:fontFamily="@font/msmincho"
            android:text="@string/two"
            android:textColor="@color/yugioh_yellow"
            android:textSize="20sp"
            android:textStyle="bold|italic" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="43dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:fontFamily="@font/msmincho"
            android:text="@string/three"
            android:textColor="@color/yugioh_yellow"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:fontFamily="@font/msmincho"
            android:text="@string/four"
            android:textColor="@color/yugioh_yellow"
            android:textSize="20sp"
            android:textStyle="bold|italic" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/cardView6"
        app:layout_constraintStart_toEndOf="@+id/cardView4"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:fontFamily="@font/msmincho"
            android:text="@string/five"
            android:textColor="@color/yugioh_yellow"
            android:textSize="20sp"
            android:textStyle="bold|italic" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="43dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:fontFamily="@font/msmincho"
            android:text="@string/six"
            android:textColor="@color/yugioh_yellow"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView7"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView4">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:fontFamily="@font/msmincho"
            android:text="@string/seven"
            android:textColor="@color/yugioh_yellow"
            android:textSize="20sp"
            android:textStyle="bold|italic" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView8"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/cardView9"
        app:layout_constraintStart_toEndOf="@+id/cardView7"
        app:layout_constraintTop_toBottomOf="@+id/cardView5">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:fontFamily="@font/msmincho"
            android:text="@string/eight"
            android:textColor="@color/yugioh_yellow"
            android:textSize="20sp"
            android:textStyle="bold|italic" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView9"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="43dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView6">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:fontFamily="@font/msmincho"
            android:text="@string/nine"
            android:textColor="@color/yugioh_yellow"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView0"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView7">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:fontFamily="@font/msmincho"
            android:text="@string/zero"
            android:textColor="@color/yugioh_yellow"
            android:textSize="20sp"
            android:textStyle="bold|italic" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView00"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/cardView000"
        app:layout_constraintStart_toEndOf="@+id/cardView0"
        app:layout_constraintTop_toBottomOf="@+id/cardView8">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:fontFamily="@font/msmincho"
            android:text="@string/zerozero"
            android:textColor="@color/yugioh_yellow"
            android:textSize="20sp"
            android:textStyle="bold|italic" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView000"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="43dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView9">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:fontFamily="@font/msmincho"
            android:text="@string/zerozerozero"
            android:textColor="@color/yugioh_yellow"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewminus"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/cardViewclear"
        app:layout_constraintStart_toEndOf="@+id/cardViewplus"
        app:layout_constraintTop_toBottomOf="@+id/cardView000">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonminus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_dark"
            android:fontFamily="@font/msmincho"
            android:text="@string/minus"
            android:textColor="@color/yugioh_yellow"
            android:textSize="35sp"
            android:textStyle="bold|italic" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewplus"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView0">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonplus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_dark"
            android:fontFamily="@font/msmincho"
            android:text="@string/plus"
            android:textColor="@color/yugioh_yellow"
            android:textSize="35sp"
            android:textStyle="bold|italic" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewclear"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="43dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView000">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonclear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_dark"
            android:fontFamily="@font/msmincho"
            android:text="@string/clear"
            android:textColor="@color/yugioh_yellow"
            android:textSize="25sp"
            android:textStyle="bold|italic" />

    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="368dp"
        android:layout_height="45dp"
        android:layout_marginBottom="64dp"
        android:max="8000"
        android:progressTint="@color/purple_200"
        app:layout_constraintBottom_toTopOf="@+id/buttonreset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>